force-app/main/default/objects/vlocity_ps__Case__c/vlocity_ps__Case__c.object-meta.xml
<CustomObject>
    <description>Represents and tracks the circumstances and situation of a particular person or group who is receiving services or benefits from a public program.</description>
    <label>Benefit Case</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>