force-app/main/default/objects/vlocity_ps__Case__c/fields/DaysLeft__c.field-meta.xml
<CustomField>
    <fullName>DaysLeft__c</fullName>
    <formula>IF(vlocity_ps__DaysOpen__c&gt;30,0,30 - vlocity_ps__DaysOpen__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>