force-app/main/default/objects/vlocity_ps__Case__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>vlocity_ps__Household__c</referenceTo>
    <relationshipLabel>Benefit Cases</relationshipLabel>
    <relationshipName>Benefit_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>