force-app/main/default/objects/vlocity_ps__Case__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added to link an Ongoing Case to an Investigation</description>
    <label>Investigation</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Benefit Cases</relationshipLabel>
    <relationshipName>Benefit_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>