force-app/main/default/objects/vlocity_ps__Case__c/fields/Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact__c</fullName>
    <label>Last Contact</label>
    <type>Date</type>
</CustomField>