force-app/main/default/objects/vlocity_ps__Case__c/fields/Number_of_Allegations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Allegations__c</fullName>
    <label>Number of Allegations</label>
    <summaryForeignKey>Allegation__c.Investigation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>