force-app/main/default/objects/vlocity_ps__Case__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Transfer to Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>