force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CaseNumber__c</fullName>
    <label>Case Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>