force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__CaseNumberAutoGenerator__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CaseNumberAutoGenerator__c</fullName>
    <displayFormat>C-{00000000}</displayFormat>
    <label>CaseNumberAutoGenerator</label>
    <type>AutoNumber</type>
</CustomField>