force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__ClientId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ClientId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Do not use for display, created only to be used in code logic.</description>
    <label>PrimClientId</label>
    <referenceTo>vlocity_ps__Party__c</referenceTo>
    <relationshipLabel>Benefit Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>