force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__DateOpened__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DateOpened__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>