force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__DaysOpen__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DaysOpen__c</fullName>
    <description>To calculate number of days the case is open</description>
    <formula>IF( TEXT(vlocity_ps__Status__c) == &apos;Closed&apos;,  vlocity_ps__DateClosed__c  -  vlocity_ps__DateOpened__c,  TODAY() -  vlocity_ps__DateOpened__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>