force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__DaysSinceLastActivity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DaysSinceLastActivity__c</fullName>
    <formula>TODAY() -   DATEVALUE( vlocity_ps__LastActivityDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>