force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__DaysSinceLastMeeting__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DaysSinceLastMeeting__c</fullName>
    <formula>TODAY() - DATEVALUE( vlocity_ps__LastEventDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>