force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__IncidentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IncidentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>vlocity_ps__Incident__c</referenceTo>
    <relationshipLabel>Benefit Cases</relationshipLabel>
    <relationshipName>Benefit_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>