force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LastActivityDate__c</fullName>
    <description>Last Activity Date</description>
    <inlineHelpText>Last Activity Date</inlineHelpText>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>