force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__LastEventDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LastEventDate__c</fullName>
    <label>Last Event Date</label>
    <type>DateTime</type>
</CustomField>