force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__LastMeetingDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LastMeetingDate__c</fullName>
    <description>Last Meeting Date</description>
    <label>Last Meeting Date</label>
    <type>Date</type>
</CustomField>