force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__MadePrimaryFromChild__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MadePrimaryFromChild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Primary</label>
    <type>Checkbox</type>
</CustomField>