force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__OverdueActivities__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OverdueActivities__c</fullName>
    <label>Overdue Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>