force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__OwnerAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OwnerAccountId__c</fullName>
    <formula>Owner:User.Contact.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider Id</label>
    <type>Text</type>
</CustomField>