force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__OwnerAccountName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OwnerAccountName__c</fullName>
    <formula>Owner:User.Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider</label>
    <type>Text</type>
</CustomField>