force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__OwnerAccountType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OwnerAccountType__c</fullName>
    <formula>TEXT(Owner:User.Contact.Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerAccountType</label>
    <type>Text</type>
</CustomField>