force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrimaryContact__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>