force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__PrimaryContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrimaryContactFirstName__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact First Name</label>
    <type>Text</type>
</CustomField>