force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__PrimaryContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrimaryContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Benefit Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>