force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__PrimaryContactPartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrimaryContactPartyId__c</fullName>
    <formula>vlocity_ps__PrimaryContactId__r.vlocity_ps__PartyId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Client</label>
    <type>Text</type>
</CustomField>