force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__PrimaryParty__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrimaryParty__c</fullName>
    <formula>vlocity_ps__ClientId__r.vlocity_ps__PartyEntityName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Party</label>
    <type>Text</type>
</CustomField>