force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__ServicePlanPrice__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServicePlanPrice__c</fullName>
    <label>Cost of Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>