force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
                <color>#0B6FCE</color>
                <label>Closed</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <color>#E27001</color>
                <label>Open</label>
            </value>
            <value>
                <fullName>Unfounded-Closed</fullName>
            </value>
            <value>
                <fullName>Founded-Transfer to Ongoing</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>