force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__SupervisorId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SupervisorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case Supervisor. User in the system.</description>
    <label>Case Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CaseSupervisors</relationshipName>
    <type>Lookup</type>
</CustomField>