force-app/main/default/objects/vlocity_ps__Case__c/fields/vlocity_ps__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>Child Support Enforcement</fullName>
            </value>
            <value>
                <fullName>Child Welfare</fullName>
            </value>
            <value>
                <fullName>Disability Assistance</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Food Assistance</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>In-home</fullName>
            </value>
            <value>
                <fullName>Out-of-home</fullName>
            </value>
            <value>
                <fullName>Foster Care</fullName>
            </value>
            <value>
                <fullName>Permanency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>