force-app/main/default/objects/vlocity_ps__Case__c/recordTypes/Child_Support_Enforcement.recordType-meta.xml
<RecordType>
    <fullName>Child_Support_Enforcement</fullName>
    <active>true</active>
    <description>A long running benefit case for family / children in a child support enforcement program</description>
    <label>Child Support Enforcement</label>
</RecordType>