force-app/main/default/objects/vlocity_ps__Case__c/recordTypes/Child_Welfare.recordType-meta.xml
<RecordType>
    <fullName>Child_Welfare</fullName>
    <active>true</active>
    <description>A long running benefit case for family / children in a child welfare program</description>
    <label>Child Welfare</label>
</RecordType>