force-app/main/default/objects/vlocity_ps__Case__c/recordTypes/Investigation.recordType-meta.xml
<RecordType>
    <fullName>Investigation</fullName>
    <active>true</active>
    <label>Investigation</label>
</RecordType>