force-app/main/default/objects/vlocity_ps__Case__c/listViews/vlocity_ps__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ps__Type__c</columns>
    <columns>vlocity_ps__PrimaryContactId__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>vlocity_ps__DateOpened__c</columns>
    <columns>vlocity_ps__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>