force-app/main/default/objects/vlocity_ps__Case__c/listViews/vlocity_ps__My_Cases.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__My_Cases</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ps__CaseNumber__c</columns>
    <columns>vlocity_ps__DateOpened__c</columns>
    <columns>vlocity_ps__Stage__c</columns>
    <columns>vlocity_ps__Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Cases</label>
    <language>en_US</language>
</ListView>